--- a/app/src/main/res/layout/content_launch_screen.xml
+++ b/app/src/main/res/layout/content_launch_screen.xml
@@ -16,5 +16,5 @@
     <TextView
             android:text="Hello World!"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" android:id="@+id/events_outlet"/>
 </RelativeLayout>
