--- a/app/src/main/res/layout/fragment_main_event.xml
+++ b/app/src/main/res/layout/fragment_main_event.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="500dp"
+    android:id="@id/fragment_main_event"
     tools:context="org.eurofurence.connavigator.MainEventFragment">
 
     <!-- TODO: Update blank fragment layout -->
