Added placeholder event

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -2,4 +2,5 @@
 <resources>
     <item name="date" type="id" />
     <item name="fragment_main_event" type="id" />
+    <item name="test_title" type="id" />
 </resources>
