Added regular event fragment

--- a/app/src/main/res/layout/content_launch_screen.xml
+++ b/app/src/main/res/layout/content_launch_screen.xml
@@ -14,4 +14,12 @@
         tools:context="org.eurofurence.connavigator.LaunchScreenActivity"
     android:id="@+id/mainActivityLayout">
 
+        <fragment
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:name="org.eurofurence.connavigator.MainEventFragment"
+            android:id="@+id/fragment"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 </RelativeLayout>
