--- a/app/src/main/res/layout/content_launch_screen.xml
+++ b/app/src/main/res/layout/content_launch_screen.xml
@@ -5,21 +5,12 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:background="@color/colorPrimaryDark"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:showIn="@layout/app_bar_launch_screen"
         tools:context="org.eurofurence.connavigator.LaunchScreenActivity"
-    android:id="@+id/mainActivityLayout">
-
-        <fragment
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:name="org.eurofurence.connavigator.MainEventFragment"
-            android:id="@+id/fragment"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+        android:id="@+id/mainActivityLayout">
+    <android.support.v7.widget.RecyclerView android:layout_width="match_parent"
+                                            android:layout_height="match_parent" android:scrollbars="vertical"
+                                            android:id="@+id/eventRecycler"/>
 </RelativeLayout>
