--- a/app/src/main/res/layout/fragment_main_event.xml
+++ b/app/src/main/res/layout/fragment_main_event.xml
@@ -1,7 +1,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="fill_parent"
-              android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:layout_height="wrap_content"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:id="@id/fragment_main_event"
               tools:context="org.eurofurence.connavigator.MainEventFragment">
 
@@ -10,7 +11,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_gravity="center"
-            android:layout_margin="16dp"
+            android:layout_margin="4dp"
             app:cardUseCompatPadding="true"
             app:cardElevation="@dimen/cardview_default_elevation"
             app:cardCornerRadius="@dimen/cardview_default_radius"
@@ -20,29 +21,36 @@
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:background="@color/colorPrimary">
 
             <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
+                    android:layout_height="150dp"
                     android:cropToPadding="false"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/placeholder_event"/>
+                    android:src="@drawable/placeholder_event"
+                    />
+
             <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
+
                 <TextView
                         android:id="@+id/eventTitle"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:background="@color/colorPrimary"
-                        android:padding="8dp"
+                        android:padding="16dp"
                         android:paddingBottom="0dp"
                         android:paddingTop="0dp"
                         android:text="This is a card"
                         android:textColor="#dcdcdc"
-                        android:textSize="30sp"/>
+                        android:textSize="30sp"
+                        android:layout_marginBottom="3dp"
+                        />
+
                 <android.support.design.widget.FloatingActionButton
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"/>
@@ -56,15 +64,29 @@
                     android:background="@color/colorPrimaryLight"
                     android:textColor="@color/textColor"
                     android:text="Time placeholder"
-                    android:padding="8dp"/>
-            <TextView android:id="@+id/eventHosts" android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:background="@color/colorPrimaryLight" android:textColor="@color/textColor"
-                      android:text="Hosts placeholder" android:padding="8dp"/>
-            <TextView android:id="@+id/eventDescription" android:layout_width="match_parent"
-                      android:layout_height="150dp" android:background="@color/colorPrimary"
-                      android:textColor="@color/textColor" android:text="Description placeholder"
-                      android:padding="8dp"/>
+                    android:padding="8dp"
+                    android:layout_marginTop="3dp"
+                    />
+
+            <TextView
+                    android:id="@+id/eventHosts"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorPrimaryLight"
+                    android:textColor="@color/textColor"
+                    android:text="Hosts placeholder"
+                    android:padding="8dp"
+                    android:layout_marginBottom="3dp"/>
+
+            <TextView
+                    android:id="@+id/eventDescription"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:background="@color/colorPrimaryLight"
+                    android:textColor="@color/textColor"
+                    android:text="Description placeholder"
+                    android:padding="8dp"
+                    android:layout_marginTop="3dp"/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
