--- a/app/src/main/res/layout/nav_header_launch_screen.xml
+++ b/app/src/main/res/layout/nav_header_launch_screen.xml
@@ -11,24 +11,42 @@
               android:orientation="vertical"
               android:gravity="bottom">
 
-    <ImageView
-            android:layout_width="wrap_content"
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="@dimen/nav_header_vertical_spacing"
-            android:src="@android:drawable/sym_def_app_icon"
-            android:id="@+id/imageView"/>
+            android:baselineAligned="false">
+
+        <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="@dimen/nav_header_vertical_spacing"
+                android:src="@mipmap/ic_launcher"
+                />
+
+        <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:paddingTop="@dimen/nav_header_vertical_spacing"
+                android:text="Days"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                android:id="@+id/navDays"
+                android:gravity="center_vertical"
+                android:paddingLeft="16dp"/>
+    </LinearLayout>
 
     <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/nav_header_vertical_spacing"
-            android:text="Android Studio"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
+            android:text="Eurofurence 22"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:id="@+id/navTitle"/>
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="android.studio@android.com"
-            android:id="@+id/textView"/>
+            android:text="Back to the 80s"
+            android:id="@+id/navSubtitle"/>
 
 </LinearLayout>
