--- a/app/src/main/res/layout/activity_launch_screen.xml
+++ b/app/src/main/res/layout/activity_launch_screen.xml
@@ -15,7 +15,7 @@
             android:layout_height="match_parent"/>
 
     <android.support.design.widget.NavigationView
-            android:id="@+id/nav_view"
+            android:id="@+id/navView"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start"
