Use volley images and refactor
Volley provides mechanisms to load images for Android UI controls. These have been tested to a small degree. A number of refactorings were performed, reordering the services, functions, and utilities by concern.

--- a/app/src/main/res/layout/fragment_main_event.xml
+++ b/app/src/main/res/layout/fragment_main_event.xml
@@ -24,12 +24,12 @@
                 android:orientation="vertical"
                 android:background="@color/colorPrimary">
 
-            <ImageView
+            <com.android.volley.toolbox.NetworkImageView
+                    android:id="@+id/eventImage"
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
                     android:cropToPadding="false"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/placeholder_event"
                     />
 
             <LinearLayout
