--- a/app/src/main/res/layout/fragment_main_event.xml
+++ b/app/src/main/res/layout/fragment_main_event.xml
@@ -24,7 +24,7 @@
                 android:orientation="vertical"
                 android:background="@color/colorPrimary">
 
-            <com.android.volley.toolbox.NetworkImageView
+            <ImageView
                     android:id="@+id/eventImage"
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
