--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,11 +6,25 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColor">@color/textColor</item>
     </style>
+
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
+
+    <style name="AppTheme.BaseItem" parent="AppTheme">
+        <item name="android:padding">10dp</item>
+        <item name="android:colorBackground">@color/colorPrimary</item>
+        <item name="android:textSize">30sp</item>
+    </style>
+
+    <style name="AppTheme.TextView" parent="AppTheme.BaseItem">
+        <item name="android:textSize">14sp</item>
+        <item name="android:colorBackground">@color/colorPrimaryLight</item>
+    </style>
+
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
