Wholly implemented EventActivity. It's now rendering times and organizers

--- a/app/src/main/res/layout/activity_event_content.xml
+++ b/app/src/main/res/layout/activity_event_content.xml
@@ -31,6 +31,34 @@
                     android:id="@+id/eventTitle" android:gravity="center_horizontal"
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp" style="@style/AppTheme.BaseItem"/>
+            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
+                          android:layout_height="match_parent" android:weightSum="10">
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Con Day: %s"
+                        android:id="@+id/eventDay" style="@style/AppTheme.TextView" android:layout_weight="5"/>
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="Room: %s"
+                        android:id="@+id/eventRoom" android:layout_weight="5" style="@style/AppTheme.TextView"/>
+            </LinearLayout>
+            <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" android:weightSum="10">
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="%s - %s"
+                        android:id="@+id/eventTime" android:layout_weight="5" style="@style/AppTheme.TextView"/>
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Run by %s"
+                        android:id="@+id/eventOrganizers" android:layout_weight="5" style="@style/AppTheme.TextView"/>
+            </LinearLayout>
             <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
