Pull ot refresh on main event instance

--- a/app/src/main/res/layout/activity_launch_screen_content.xml
+++ b/app/src/main/res/layout/activity_launch_screen_content.xml
@@ -46,8 +46,13 @@
                     android:id="@+id/daySelector" android:layout_weight="12"
                     android:spinnerMode="dropdown"/>
         </LinearLayout>
-        <android.support.v7.widget.RecyclerView android:layout_width="match_parent"
-                                                android:layout_height="match_parent" android:scrollbars="vertical"
-                                                android:id="@+id/eventRecycler"/>
+        <android.support.v4.widget.SwipeRefreshLayout android:layout_width="match_parent"
+                                                      android:layout_height="match_parent"
+                                                      android:id="@+id/eventRefresh">
+            <android.support.v7.widget.RecyclerView android:layout_width="match_parent"
+                                                    android:layout_height="match_parent" android:scrollbars="vertical"
+                                                    android:id="@+id/eventRecycler"/>
+        </android.support.v4.widget.SwipeRefreshLayout>
+
     </LinearLayout>
 </RelativeLayout>
