Refactor the UI and code
The database interface has been refactored, including utility methods. The image service now handles null-images. APIs for both content fragments and the root activity were introduced. A new root activity deals with content management. Fragments for viewing list of event and info, as well as their details were created. View obtaining delegators have been created for fragments. Missing extensions were implemented. The layout structure has been changed to conform to the new fragment based approach. Refactorings to the layout itself is pending.

--- a/app/src/main/res/layout/fragment_main_event.xml
+++ b/app/src/main/res/layout/fragment_main_event.xml
@@ -29,8 +29,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
                     android:cropToPadding="false"
-                    android:scaleType="centerCrop"
-                    />
+                    android:scaleType="centerCrop"/>
 
             <LinearLayout
                     android:layout_width="fill_parent"
