--- a/app/src/main/res/layout/fragment_view_info_groups.xml
+++ b/app/src/main/res/layout/fragment_view_info_groups.xml
@@ -7,10 +7,12 @@
         android:layout_height="match_parent"
         android:background="@color/colorPrimaryDark"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:showIn="@layout/activity_launch_screen_bar"
-        tools:context="org.eurofurence.connavigator.LaunchScreenActivity"
+        tools:context="org.eurofurence.connavigator.ui.FragmentViewInfoGroups"
         android:id="@+id/mainActivityLayout">
-    <android.support.v7.widget.RecyclerView android:layout_width="match_parent"
-                                            android:layout_height="match_parent" android:scrollbars="vertical"
-                                            android:id="@+id/infoRecycler"/>
+
+    <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="vertical"
+            android:id="@+id/infoGroups"/>
 </RelativeLayout>
