--- a/app/src/main/res/layout/layout_info_group.xml
+++ b/app/src/main/res/layout/layout_info_group.xml
@@ -1,8 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:id="@+id/fragment_info_group">
+              xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <!-- TODO: Update blank fragment layout -->
     <android.support.v7.widget.CardView
@@ -20,7 +19,7 @@
             <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
-                    android:id="@+id/infoGroupFragmentImage"
+                    android:id="@+id/image"
                     android:src="@drawable/placeholder_event"
                     android:contentDescription="Info image"/>
 
@@ -30,7 +29,7 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:text="Large Text"
-                    android:id="@+id/infoGroupFragmentTitle"
+                    android:id="@+id/title"
                     android:textColor="#c8c8c8"/>
 
             <TextView
@@ -38,8 +37,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Large Text"
-                    android:id="@+id/infoGroupFragmentDescription"
-                    android:textColor="#c8c8c8"/>
+                    android:id="@+id/description"
+                    android:textColor="#858585"/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
