--- a/app/src/main/res/layout/layout_info_group_item.xml
+++ b/app/src/main/res/layout/layout_info_group_item.xml
@@ -1,8 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:id="@+id/fragment_info_item">
+              xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <!-- TODO: Update blank fragment layout -->
     <android.support.v7.widget.CardView
@@ -21,7 +20,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="Large Text"
-                android:id="@+id/infoFragmentTitle"
+                android:id="@+id/title"
                 android:textColor="#000000"/>
     </android.support.v7.widget.CardView>
 </LinearLayout>
