--- a/app/src/main/res/menu/activity_root_drawer.xml
+++ b/app/src/main/res/menu/activity_root_drawer.xml
@@ -3,19 +3,19 @@
 
     <group android:checkableBehavior="single">
         <item
-                android:id="@+id/nav_camera"
+                android:id="@+id/navEvents"
                 android:icon="@drawable/ic_menu_camera"
-                android:title="Import"/>
+                android:title="Events"/>
         <item
-                android:id="@+id/nav_gallery"
+                android:id="@+id/navInfo"
                 android:icon="@drawable/ic_menu_gallery"
-                android:title="Gallery"/>
+                android:title="Info"/>
         <item
-                android:id="@+id/nav_slideshow"
+                android:id="@+id/navDealersDen"
                 android:icon="@drawable/ic_menu_slideshow"
-                android:title="Slideshow"/>
+                android:title="Dealers den"/>
         <item
-                android:id="@+id/nav_manage"
+                android:id="@+id/navTools"
                 android:icon="@drawable/ic_menu_manage"
                 android:title="Tools"/>
     </group>
@@ -23,11 +23,11 @@
     <item android:title="Communicate">
         <menu>
             <item
-                    android:id="@+id/nav_share"
+                    android:id="@+id/navShare"
                     android:icon="@drawable/ic_menu_share"
                     android:title="Share"/>
             <item
-                    android:id="@+id/nav_send"
+                    android:id="@+id/navSend"
                     android:icon="@drawable/ic_menu_send"
                     android:title="Send"/>
         </menu>
