You can now see con days and rooms instead of UID's

--- a/app/src/main/res/menu/activity_root_drawer.xml
+++ b/app/src/main/res/menu/activity_root_drawer.xml
@@ -18,6 +18,10 @@
                 android:id="@+id/navTools"
                 android:icon="@drawable/ic_menu_manage"
                 android:title="Tools"/>
+        <item
+            android:id="@+id/navMap"
+            android:icon="@drawable/common_plus_signin_btn_icon_dark_normal"
+            android:title="Points of Interest" />
     </group>
 
     <item android:title="App Management">
