--- a/app/src/main/res/layout/fragment_view_map.xml
+++ b/app/src/main/res/layout/fragment_view_map.xml
@@ -5,5 +5,6 @@
               android:layout_height="match_parent">
     <fragment android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:name="com.google.android.gms.maps.MapFragment" android:id="@+id/fragment"/>
+              android:name="com.google.android.gms.maps.MapFragment"
+              android:id="@+id/internalMapFragment"/>
 </LinearLayout>
