--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -6,7 +6,7 @@
                 android:key="@string/settings_tag_analytics_enabled"
                 android:title="Enable Analytics"
                 android:defaultValue="true"/>
-        <ListPreference
+        <EditTextPreference
                 android:dependency="@string/settings_tag_analytics_interval"
                 android:key="analytics_polling_interval"
                 android:title="Analytics Polling Interval"
