Made top bar not dissapear

--- a/app/src/main/res/layout/activity_root.xml
+++ b/app/src/main/res/layout/activity_root.xml
@@ -30,10 +30,9 @@
             <android.support.v7.widget.Toolbar
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
+                    android:layout_height="wrap_content"
                     android:background="?attr/colorPrimary"
                     android:fitsSystemWindows="true"
-                    app:layout_scrollFlags="scroll|snap"
                     app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
         </android.support.design.widget.AppBarLayout>
@@ -42,6 +41,7 @@
         <FrameLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingTop="@dimen/toolbar_height"
                 android:id="@+id/content">
             <!-- Filled by the root activity -->
         </FrameLayout>
