Started work on reworking UI

--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -1,8 +1,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle">
     <gradient
-            android:startColor="@color/colorPrimary"
-            android:endColor="@color/colorPrimaryDark"
+            android:startColor="@color/primary"
+            android:endColor="@color/primaryDark"
             android:type="linear"
-            android:angle="135"/>
+            android:angle="135"
+    android:gradientRadius="1dp"/>
 </shape>
