--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,32 +1,33 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Base.Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:textViewStyle">@style/AppTheme.TextView</item>
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primaryDark</item>
+        <item name="colorAccent">@color/accent</item>
+        <item name="android:colorForeground">@color/textBlack</item>
     </style>
+
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="AppTheme.BaseItem" parent="AppTheme">
+    <style name="AppTheme.Header" parent="AppTheme">
+        <item name="android:background">@color/primaryDarker</item>
+        <item name="android:padding">20dp</item>
+        <item name="android:textColor">@color/textWhite</item>
+        <item name="android:gravity">center_horizontal</item>
+    </style>
+
+    <style name="AppTheme.Header.Sub" parent="AppTheme.Header">
+        <item name="android:background">@color/primaryLight</item>
+        <item name="android:gravity">left</item>
         <item name="android:padding">10dp</item>
-        <item name="android:colorBackground">@color/colorPrimary</item>
-        <item name="android:textSize">30sp</item>
     </style>
-
-    <style name="AppTheme.TextView" parent="AppTheme.BaseItem">
-        <item name="android:textSize">14sp</item>
-        <item name="android:colorBackground">@color/colorPrimaryLight</item>
-        <item name="android:textColor">@color/textColor</item>
-    </style>
-
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
-
 </resources>
