--- a/app/src/main/res/layout/fragment_main_event.xml
+++ b/app/src/main/res/layout/fragment_main_event.xml
@@ -9,26 +9,19 @@
     <!-- TODO: Update blank fragment layout -->
     <android.support.v7.widget.CardView
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_gravity="center"
-            android:layout_margin="4dp"
-            app:cardUseCompatPadding="true"
-            app:cardElevation="@dimen/cardview_default_elevation"
-            app:cardCornerRadius="@dimen/cardview_default_radius"
-            android:background="@color/colorPrimary"
+            android:layout_height="wrap_content"
+            app:cardElevation="2dp"
             android:id="@+id/eventCard">
 
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:background="@color/colorPrimary">
+                android:orientation="vertical">
 
             <ImageView
                     android:id="@+id/eventImage"
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
-                    android:cropToPadding="false"
                     android:scaleType="centerCrop"/>
 
             <LinearLayout
@@ -40,15 +33,9 @@
                         android:id="@+id/eventTitle"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
-                        android:background="@color/colorPrimary"
-                        android:padding="16dp"
-                        android:paddingBottom="0dp"
-                        android:paddingTop="0dp"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
                         android:text="This is a card"
-                        android:textColor="#dcdcdc"
-                        android:textSize="30sp"
-                        android:layout_marginBottom="3dp"
-                        />
+                        style="@style/AppTheme.Header"/>
 
                 <android.support.design.widget.FloatingActionButton
                         android:layout_width="match_parent"
@@ -60,32 +47,25 @@
                     android:id="@+id/eventDate"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/colorPrimaryLight"
-                    android:textColor="@color/textColor"
                     android:text="Time placeholder"
                     android:padding="8dp"
-                    android:layout_marginTop="3dp"
-                    />
+                    android:paddingTop="3dp"
+            />
 
             <TextView
                     android:id="@+id/eventHosts"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/colorPrimaryLight"
-                    android:textColor="@color/textColor"
                     android:text="Hosts placeholder"
                     android:padding="8dp"
-                    android:layout_marginBottom="3dp"/>
+                    android:paddingBottom="11dp"/>
 
             <TextView
                     android:id="@+id/eventDescription"
                     android:layout_width="match_parent"
-                    android:layout_height="150dp"
-                    android:background="@color/colorPrimaryLight"
-                    android:textColor="@color/textColor"
+                    android:layout_height="wrap_content"
                     android:text="Description placeholder"
-                    android:padding="8dp"
-                    android:layout_marginTop="3dp"/>
+                    android:padding="8dp"/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
