--- a/app/src/main/res/layout/fragment_view_event.xml
+++ b/app/src/main/res/layout/fragment_view_event.xml
@@ -5,7 +5,6 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimaryDark"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context="org.eurofurence.connavigator.ui.EventActivity">
 
@@ -35,7 +34,7 @@
                     android:gravity="center_horizontal"
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp"
-                    style="@style/AppTheme.BaseItem"/>
+                    style="@style/AppTheme.Header"/>
 
             <LinearLayout
                     android:orientation="horizontal"
@@ -48,8 +47,8 @@
                         android:layout_height="wrap_content"
                         android:text="Con Day: %s"
                         android:id="@+id/day"
-                        style="@style/AppTheme.TextView"
-                        android:layout_weight="5"/>
+                        android:layout_weight="5"
+                style="@style/AppTheme.Header.Sub"/>
 
                 <TextView
                         android:layout_width="wrap_content"
@@ -57,7 +56,7 @@
                         android:text="Room: %s"
                         android:id="@+id/room"
                         android:layout_weight="5"
-                        style="@style/AppTheme.TextView"/>
+                style="@style/AppTheme.Header.Sub"/>
             </LinearLayout>
 
             <LinearLayout
@@ -72,7 +71,7 @@
                         android:text="%s - %s"
                         android:id="@+id/time"
                         android:layout_weight="5"
-                        style="@style/AppTheme.TextView"/>
+                        style="@style/AppTheme.Header.Sub"/>
 
                 <TextView
                         android:layout_width="wrap_content"
@@ -80,16 +79,14 @@
                         android:text="Run by %s"
                         android:id="@+id/organizers"
                         android:layout_weight="5"
-                        style="@style/AppTheme.TextView"/>
+                        style="@style/AppTheme.Header.Sub"/>
             </LinearLayout>
 
             <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="New Text"
-                    android:id="@+id/description"
-                    android:background="@color/colorPrimaryLight"
-                    style="@style/AppTheme.TextView"/>
+                    android:id="@+id/description"/>
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
