--- a/app/src/main/res/layout/fragment_view_events.xml
+++ b/app/src/main/res/layout/fragment_view_events.xml
@@ -6,7 +6,6 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimaryDark"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context=".ui.FragmentViewEvents">
 
@@ -17,7 +16,7 @@
             android:layout_height="wrap_content"
             android:weightSum="20"
             style="@style/AppTheme.TextView"
-            android:background="@color/colorPrimaryLight">
+            android:background="@color/primaryLight">
 
         <TextView
                 android:layout_width="100dp"
@@ -41,7 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:weightSum="20"
-            android:background="@color/colorPrimaryLight"
+            android:background="@color/primaryLight"
             style="@style/AppTheme.TextView">
 
         <TextView
