Reworked UI to only use styles instead of hardcoding values

--- a/app/src/main/res/layout/fragment_view_info.xml
+++ b/app/src/main/res/layout/fragment_view_info.xml
@@ -8,7 +8,9 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context="org.eurofurence.connavigator.ui.FragmentViewInfo"
-        android:id="@+id/eventActivityLayout">
+        android:id="@+id/eventActivityLayout"
+
+        android:background="@android:color/background_light">
 
     <ImageView
             android:layout_width="match_parent"
