--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -1,9 +1,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle">
     <gradient
-            android:startColor="@color/primary"
-            android:endColor="@color/primaryDark"
+            android:startColor="@color/primaryLighter"
+            android:endColor="@color/primaryDarker"
             android:type="linear"
             android:angle="135"
-    android:gradientRadius="1dp"/>
+            android:gradientRadius="5dp"/>
 </shape>
