--- a/app/src/main/res/layout/fragment_main_event.xml
+++ b/app/src/main/res/layout/fragment_main_event.xml
@@ -4,7 +4,8 @@
               android:layout_height="wrap_content"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:id="@id/fragment_main_event"
-              tools:context="org.eurofurence.connavigator.MainEventFragment">
+              tools:context="org.eurofurence.connavigator.MainEventFragment"
+              android:background="@android:color/background_light">
 
     <!-- TODO: Update blank fragment layout -->
     <android.support.v7.widget.CardView
@@ -21,7 +22,7 @@
             <ImageView
                     android:id="@+id/eventImage"
                     android:layout_width="match_parent"
-                    android:layout_height="150dp"
+                    android:layout_height="@dimen/image_height"
                     android:scaleType="centerCrop"/>
 
             <LinearLayout
