--- a/app/src/main/res/layout/fragment_regular_event.xml
+++ b/app/src/main/res/layout/fragment_regular_event.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="org.eurofurence.connavigator.RegularEventFragment"
-    android:id="@+id/eventTitle">
+    android:id="@+id/eventTitle"
+                                    android:background="@android:color/background_light">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
