--- a/app/src/main/res/layout/fragment_view_event.xml
+++ b/app/src/main/res/layout/fragment_view_event.xml
@@ -6,7 +6,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="org.eurofurence.connavigator.ui.EventActivity">
+        tools:context="org.eurofurence.connavigator.ui.EventActivity"
+        android:background="@android:color/background_light">
 
     <ScrollView
             android:layout_width="match_parent"
