--- a/app/src/main/res/layout/fragment_view_events.xml
+++ b/app/src/main/res/layout/fragment_view_events.xml
@@ -7,7 +7,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context=".ui.FragmentViewEvents">
+        tools:context=".ui.FragmentViewEvents"
+        android:background="@android:color/background_light">
 
 
     <LinearLayout
@@ -15,7 +16,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:weightSum="20"
-            style="@style/AppTheme.TextView"
             android:background="@color/primaryLight">
 
         <TextView
@@ -24,8 +24,7 @@
                 android:text="@string/room"
                 android:id="@+id/roomChoiceText"
                 android:layout_weight="8"
-                android:gravity="center_vertical"
-                style="@style/AppTheme.TextView"/>
+                android:gravity="center_vertical"/>
 
         <Spinner
                 android:layout_width="wrap_content"
@@ -40,11 +39,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:weightSum="20"
-            android:background="@color/primaryLight"
-            style="@style/AppTheme.TextView">
+            android:background="@color/primaryLight">
 
         <TextView
-                style="@style/AppTheme.TextView"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:text="@string/day"
