--- a/app/src/main/res/layout/fragment_view_info_groups.xml
+++ b/app/src/main/res/layout/fragment_view_info_groups.xml
@@ -7,7 +7,8 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context="org.eurofurence.connavigator.ui.FragmentViewInfoGroups"
-        android:id="@+id/mainActivityLayout">
+        android:id="@+id/mainActivityLayout"
+        android:background="@android:color/background_light">
 
     <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
