--- a/app/src/main/res/layout/layout_info_group.xml
+++ b/app/src/main/res/layout/layout_info_group.xml
@@ -1,7 +1,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
-              xmlns:app="http://schemas.android.com/apk/res-auto">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:background="@android:color/background_light">
 
     <!-- TODO: Update blank fragment layout -->
     <android.support.v7.widget.CardView
@@ -17,7 +18,7 @@
 
             <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
+                    android:layout_height="@dimen/image_height"
                     android:id="@+id/image"
                     android:src="@drawable/placeholder_event"
                     android:contentDescription="Info image"/>
