--- a/app/src/main/res/layout/layout_info_group_item.xml
+++ b/app/src/main/res/layout/layout_info_group_item.xml
@@ -1,7 +1,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
-              xmlns:app="http://schemas.android.com/apk/res-auto">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:background="@android:color/background_light">
 
     <!-- TODO: Update blank fragment layout -->
     <android.support.v7.widget.CardView
