--- a/app/src/main/res/layout/fragment_view_map.xml
+++ b/app/src/main/res/layout/fragment_view_map.xml
@@ -4,8 +4,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@android:color/background_light">
-    <fragment android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:name="com.google.android.gms.maps.MapFragment"
-              android:id="@+id/internalMapFragment"/>
+    <RelativeLayout android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/internalMapFragment"/>
 </LinearLayout>
