--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,6 +29,7 @@
         <item name="android:background">@color/primaryLight</item>
         <item name="android:gravity">left</item>
         <item name="android:padding">10dp</item>
+        <item name="android:textSize">18sp</item>
     </style>
 
     <style name="AppTheme.Button" parent="AppTheme">
