updated events list to look a bit prettier and less convoluted

--- a/app/src/main/res/layout/fragment_main_event.xml
+++ b/app/src/main/res/layout/fragment_main_event.xml
@@ -60,7 +60,7 @@
                     android:text="Hosts placeholder"
                     style="@style/AppTheme.Header.Sub"/>
 
-            <TextView
+            <us.feras.mdv.MarkdownView
                     android:id="@+id/eventDescription"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
